# AutoSense

./: .gitignore  DEV-README.md  README.md  pnpm-lock.yaml  pyproject.toml
backend/app/: llm_provider.py  main.py
backend/app/api/: chat_router.py
backend/app/core/: config.py
backend/app/providers/: ollama_provider.py
backend/app/services/: conversation.py
frontend/: package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: AssistantMessageBox.tsx  ChatHeader.tsx  ChatInputArea.tsx  UserMessageBox.tsx
frontend/src/pages/: ChatPage.tsx
frontend/src/types/: ChatMessage.ts
